rust-examples/tests/compile-fail/Rule_17_6.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let data: [u32; static 4];
}
